--- a/ThemeInfo.ini
+++ b/ThemeInfo.ini
@@ -1,4 +1,4 @@
 [ThemeInfo]
 DisplayName=Simply Love
-Author=
-Version=5.3.0 for ITGmania - 20231024 zmod
+Author=Matre & Chriyl
+Version=5.3.0 for ITGmania - Iatichiti ver.1
